
\item \code{getModelInfo} was updated to generate a more informative error message if the user looks for a model that is not in the package's model library. 

\item A bug was fixed related to how seeds were set inside of \code{train}. 

\item The model \code{"parRF"} (parallel random forest) was added back into the library.  

\item When case weights are specified in \code{train}, the hold-out weights are exposed when computing the summary function.  

}
}

\section{Changes in version 6.0-25}{
\itemize{
\item Changes were made that stoped execution of \code{train} if there are no rows in the data (changes suggested by Andrew Ziem)

\item Andrew Ziem also helped improve the documentation.
}
}

\section{Changes in version 6.0-24}{
\itemize{
\item Several models were updated to work with case weights.

\item A bug in \code{rfe} was found where the largest subset size have the same results as the full model. Thanks to Jose Seoane for reporting the bug. 
}
}

\section{Changes in version 6.0-22}{
\itemize{
\item For some parallel processing technologies, the package now export 
more internal functions. 
 
\item A bug was fixed in \code{rfe} that occurred when LOO CV was used.

\item Another bug was fixed that occurred for some models when 
\code{tuneGrid} contained only a single model.
 }
}


\section{Changes in version 6.0-21}{
\itemize{
\item A new system for user-defined models has been added. See 
\href{http://caret.r-forge.r-project.org/custom_models.html}{http://caret.r-forge.r-project.org/custom_models.html}.

\item When creating the grid of tuning parameter values, the column 
names no longer need to be preceded by a period. Periods can still be 
used as before but are not required. This isn't guaranteed to break
backwards compatibility but it may in some cases. 

\item \code{trainControl} now has a \code{method = "none"} resampling
option that bypasses model tuning and fits the model to the entire